styles for amenities frame and offers

--- a/styles/scss/_offermain.scss
+++ b/styles/scss/_offermain.scss
@@ -75,7 +75,7 @@
 
                 a.button{
                     position: relative;
-                    top: 18em;
+                    top: 35em;
                     background: #BEAD8E;
                     color: white;
                     font-family: Archivo;
@@ -99,6 +99,7 @@
                 
                 ul{
                     list-style-type: none;
+                    min-height: 30em;
                 }
                 li{
                     font-family: Roboto;
