--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -544,11 +544,22 @@ header {
 }
 
 .homerooms__complements {
-  width: 25em;
-  height: 5em;
+  height: 2em;
   z-index: 10;
   position: relative;
-  top: 3em;
+  padding: 2px;
+  width: 5em;
+  filter: brightness(0);
+}
+
+.homerooms__framediv {
+  display: flex;
+  background: ghostwhite;
+  height: 3em;
+  position: absolute;
+  width: 100%;
+  justify-content: center;
+  padding: 0.5em;
 }
 
 .homerooms__slider__descriptions__item {
@@ -636,7 +647,6 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    right: 3.3em;
   }
 }
 
@@ -1691,7 +1701,7 @@ header {
 
 .offermain__item__container2__description a.button {
   position: relative;
-  top: 18em;
+  top: 35em;
   background: #BEAD8E;
   color: white;
   font-family: Archivo;
@@ -1716,6 +1726,7 @@ header {
 
 .offermain__item__container2__list ul {
   list-style-type: none;
+  min-height: 30em;
 }
 
 .offermain__item__container2__list li {
@@ -1788,6 +1799,7 @@ header {
 
   .offermain__item__container2__list ul {
     margin-right: 5em;
+    min-height: 0;
   }
 }
 
@@ -1891,7 +1903,7 @@ header {
   position: absolute;
   background-color: white;
   padding: 0.5em 0.5em 0.5em 0.3em;
-  bottom: 30em;
+  bottom: 25em;
   z-index: 100;
   height: 2.5em;
   min-width: 2.5em;
@@ -1903,7 +1915,7 @@ header {
   position: relative;
   background-color: #BDAC8D;
   padding: 0.5em 0.5em 0.5em 0.3em;
-  bottom: 30em;
+  bottom: 25em;
   z-index: 100;
   height: 2.5em;
   max-width: 2.5em;
@@ -1959,11 +1971,12 @@ header {
 }
 
 #roomsComplement {
-  width: 25em;
-  height: 5em;
+  height: 2em;
   z-index: 10;
   position: relative;
-  bottom: 2em;
+  padding: 2px;
+  width: 5em;
+  filter: brightness(0);
 }
 
 @media (width > 1000px) {
@@ -2377,6 +2390,16 @@ header {
   line-height: 1.5em;
   text-align: left;
   color: #777777;
+}
+
+#amenities_frame{
+  display: flex;
+  background: ghostwhite;
+  height: 3em;
+  justify-content: center;
+  padding: 0.5em;
+  bottom: 3em;
+  position: relative;
 }
 
 @media (width > 1000px) {
