--- a/styles/scss/_details.scss
+++ b/styles/scss/_details.scss
@@ -1,20 +1,21 @@
-.details{
+.details {
     margin: 5em 2em 2em 2em;
 
-    p{
+    p {
         font-family: Roboto;
         font-size: 1.3em;
         font-weight: 400;
         line-height: 2em;
-        color: #777777;      
+        color: #777777;
     }
-    &-container{
 
-        &__item{
-            
-            &__text{
+    &-container {
 
-                h1{
+        &__item {
+
+            &__text {
+
+                h1 {
                     color: #777777;
                     font-family: Archivo;
                     font-size: 1.1em;
@@ -23,7 +24,8 @@
                     letter-spacing: 0.1em;
                     margin-bottom: 1em;
                 }
-                h4{
+
+                h4 {
                     font-family: Old Standard TT;
                     font-size: 3em;
                     font-weight: 400;
@@ -31,7 +33,8 @@
                     text-align: left;
                     margin-bottom: 0.5em;
                 }
-                p{
+
+                p {
                     color: #BEAD8E;
                     font-family: Archivo;
                     font-size: 2em;
@@ -40,16 +43,19 @@
                 }
             }
         }
-        &__image{
+
+        &__image {
             width: 33.5em;
 
-            img{
+            img {
                 width: 100%;
             }
         }
-        &__form{
+
+        &__form {
             text-align: center;
-            h2{
+
+            h2 {
                 font-family: Archivo;
                 font-size: 1.5em;
                 font-weight: 700;
@@ -58,10 +64,11 @@
                 margin: 2em;
 
             }
-            li{
+
+            li {
                 list-style-type: none;
 
-                label{
+                label {
                     display: block;
                     margin: 1em 0em 1em 1.5em;
                     text-align: left;
@@ -69,9 +76,10 @@
                     font-size: 1.4em;
                     font-weight: 700;
                     line-height: 15px;
-                    
+
                 }
-                input{
+
+                input {
                     border: none;
                     background-color: #f0eeee;
                     height: 4em;
@@ -79,14 +87,16 @@
                     padding: 1em;
                     color: #777777;
                 }
-                textarea{
+
+                textarea {
                     border: none;
                     background-color: #f0eeee;
                     min-height: 10em;
                     width: 30em;
                     padding: 1em;
                 }
-                .checkBtn{
+
+                .checkBtn {
                     background-color: #BEAD8E;
                     color: white;
                     font-family: Archivo;
@@ -104,48 +114,57 @@
     }
 }
 
+
+
 @media (width > 1000px) {
 
-    .details{
+    .details {
         display: block !important;
-        &-container{
+
+        &-container {
             display: flex;
-            align-items: center;
             justify-content: center;
             padding: 5em;
 
-            &__item{
+            &__item {
                 max-width: 100em;
+                height: 75em;
+                margin-left: 5em;
 
-                &__text{
+                &__text {
                     width: 85%;
                     background-color: white;
                     translate: 0em 8em;
                     padding: 0em 5em 1em 5em;
                 }
             }
-            &__image{
-                width: 90%;
+
+            &__image {
+                width: 750px;
             }
         }
 
-        
+
     }
-    #introPar{
-        width: 50em;
-        margin-left: 15%;
+
+    #introPar {
+        margin-left: 25%;
+        display: flex;
+        bottom: 5em;
+        position: relative;
     }
-    #titleDiv{
+
+    #titleDiv {
         display: flex;
         justify-content: space-between;
     }
-    
+
 }
 
 @media (width > 600px) {
-    .details{
+    .details {
         display: grid;
         justify-items: center;
     }
-    
+
 }
