--- a/styles/scss/_roomsgrid.scss
+++ b/styles/scss/_roomsgrid.scss
@@ -32,11 +32,23 @@
     display: none;
 }
 
-#roomsComplement{
-    width: 25em;
-    height: 5em;
+#roomsComplement {
+    height: 2em;
     z-index: 10;
     position: relative;
+    padding: 2px;
+    width: 5em;
+    filter: brightness(0);
+  }
+
+#amenities_frame{
+    display: flex;
+    background: ghostwhite;
+    height: 3em;
+    position: relative;
+    width: 100%;
+    justify-content: center;
+    padding: 0.5em;
     bottom: 2em;
 }
 
