--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -175,6 +175,7 @@ header {
   height: 6em;
   margin-right: 2em;
   border: none;
+  cursor: pointer;
 }
 .banner__indexBtn2 {
   color: white;
@@ -188,6 +189,7 @@ header {
   height: 6em;
   border: 2px solid rgba(255, 255, 255, 0.3294117647);
   margin-top: 2em;
+  cursor: pointer;
 }
 
 @media (width > 1000px) {
@@ -265,6 +267,7 @@ header {
   height: 6em;
   display: block;
   margin-top: 5em;
+  cursor: pointer;
 }
 
 @media (width > 1000px) {
@@ -338,6 +341,7 @@ header {
   height: 5em;
   border: none;
   margin: 2em 0em 5em 0em;
+  cursor: pointer;
 }
 .homeAbout__secondContainer {
   display: grid;
