swiper and styles for rooms updated

--- a/styles/scss/_relatedrooms.scss
+++ b/styles/scss/_relatedrooms.scss
@@ -68,7 +68,7 @@
         &__backArrow{
             z-index: 10;
             bottom: 30em;
-            right: 14em;
+            //right: 14em;
         }
     }
 }
