--- a/styles/scss/_roomsgrid.scss
+++ b/styles/scss/_roomsgrid.scss
@@ -1,11 +1,11 @@
 .roomsGrid__slider{
     width: 100% !important;
-    height: 190em;
+    // height: 190em;
     margin-top: 2em;
     margin-bottom: 5em;
 }
 .roomsGrid__slider .swiper-slide{
-    height: 40em !important; 
+    // height: 40em !important; 
     padding: 1em 3em 1em 3em;
     text-align: center;
     margin-top: 5em !important;
@@ -57,7 +57,7 @@
 
     .roomsGrid__slider{
         width: 65% !important;
-        height: 170em;
+        // height: 170em;
 
         img{
             width: 35em;
