--- a/styles/scss/_details.scss
+++ b/styles/scss/_details.scss
@@ -107,6 +107,7 @@
                     width: 21.5em;
                     margin-top: 2em;
                     margin-bottom: 4em;
+                    cursor: pointer;
                 }
             }
         }
