--- a/styles/scss/_homerooms.scss
+++ b/styles/scss/_homerooms.scss
@@ -90,6 +90,7 @@
         height: 3em;
         z-index: 20;
         right: 15em;
+        padding: 0.8em 0em 0.5em 0em;
     }
 
     &-forwardArrow {
@@ -98,6 +99,7 @@
         height: 3em;
         z-index: 20;
         left: 14em;
+        padding: 0.8em 0em 0.5em 0em;
     }
 }
 
